@@ -15,7 +15,8 @@ Coming in build 309, as yet unreleased
 --------------------------------------
 
 * Dropped support for Python 3.7 (#2207, @Avasam)
-* Implement record pointers as [in, out] method parameters of a Dispatch Interface (#2310)
+* Implement the creation of SAFEARRAY(VT_RECORD) from a sequence of COM Records (#2317, @geppi)
+* Implement record pointers as [in, out] method parameters of a Dispatch Interface (#2304, #2310, @geppi)
 * Fix memory leak converting to PyObject from some SAFEARRAY elements (#2316)
 * Fix bug where makepy support was unnecessarily generated (#2354, #2353, @geppi)
 * Fail sooner on invalid `win32timezone.TimeZoneInfo` creation (#2338, @Avasam)
